List todos componenet added

--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -1,4 +1,4 @@
-<h1> Todo </h1>
+<h2> Top 5 important tasks due this week </h2>
 
 <div class="alert alert-success" *ngIf='message'>{{message}}</div>
 
@@ -8,7 +8,7 @@
       <tr>
         <th>Description</th>
         <th>Target Date</th>
-        <th>is Completed?</th>
+        <th>Status</th>
         <th>Update</th>
         <th>Delete</th>
       </tr>
@@ -18,7 +18,12 @@
               <tr *ngFor="let todo of todos">
                 <td>{{todo.description}}</td>
                 <td>{{todo.targetDate | date | uppercase}}</td>
-                <td>{{todo.done}}</td>
+                <td>{{todo.done}}</td> 
+                <!-- <mat-chip-list>
+                  <mat-chip color="primary">Completed</mat-chip>
+                  <mat-chip  color="accent">In Progress</mat-chip>                  
+                </mat-chip-list>              -->
+               
                 <td><button (click)="updateTodo(todo.id)" class="btn btn-success">Update</button></td>
                 <td><button (click)="deleteTodo(todo.id)" class="btn btn-warning">Delete</button></td>
               </tr>
