--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,24 +1,22 @@
 
 <div class = "dashboard-view">  
 
-<!--     
-    <H1>Welcome!</H1>
-    Welcome {{name}}. You can manage your todos <a routerLink="/todos">here</a>
-  </div>
-  
-  <div class="container">
-    Click here to get a customized welcome message 
-    <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">Get Welcome Message</button>
-  </div>
-  
-  <div class="container" *ngIf="welcomeMessageFromService">
-      <H2>Your Customized Welcome Message</H2>
-      {{welcomeMessageFromService}}
-    </div> -->
-
     <div class="center-align">
       <p> {{ currDate }}</p>
 
+      <mat-card>
+        <mat-card-title>Budget</mat-card-title>
+        <mat-card-actions>
+          <button mat-stroked-button color="primary">GO</button>
+        </mat-card-actions>
+      </mat-card>
+      <br>
+      <mat-card>
+        <mat-card-title>Journal</mat-card-title>
+        <mat-card-actions>
+          <button mat-stroked-button color="primary">GO</button>
+        </mat-card-actions>
+      </mat-card>
     </div>
 
 
